--- a/assets/sass/components/_contact.scss
+++ b/assets/sass/components/_contact.scss
@@ -3,20 +3,16 @@
 
     &__item {
         position: relative;
-        font-size: 1rem;
+        margin-bottom: 5px;
 
         & > i {
-            background-color: $color-primary;
-            color: $color-primary-text;
-            font-size: 1rem;
-            text-align: center;
-            border-radius: 50%;
-            padding-top: 0.5rem;
-            width: 2rem;
-            height: 2rem;
-            margin-right: 0.5rem;
-            margin-bottom: 0.5rem;
+            margin-right: 5px;
+            @include themed() {
+                color: t('accent');
+            }
+            vertical-align: middle;
         }
+
         & > span {
             @include vt-center;
         }
