--- a/assets/sass/components/_side_section.scss
+++ b/assets/sass/components/_side_section.scss
@@ -1,39 +1,42 @@
 .sideSection {
-    display: block;
-    margin-bottom: 3rem;
-    @include avoid-break;
+    @include themed() {
+        display: block;
+        margin-bottom: 3rem;
+        @include avoid-break;
 
-    &__heading {
-        width: 100%;
-        overflow: hidden;
-        text-align: center;
-        margin-bottom: 1rem;
-    }
-
-    &__title {
-        position: relative;
-
-        &::after,
-        &::before {
-            content: '';
-            position: absolute;
-            border-top: 1px solid $color-secondary;
-            border-bottom: 1px solid $color-secondary;
-            width: 10rem;
-            height: 4px;
-            margin-top: 1.1rem;
+        &__heading {
+            width: 100%;
+            overflow: hidden;
+            text-align: center;
+            margin-bottom: 1rem;
         }
 
-        &::after {
-            margin-left: 1rem;
+        &__title {
+            position: relative;
+            color: t('text-important');
+
+            &::after,
+            &::before {
+                content: '';
+                position: absolute;
+                border-top: 1px solid t('text-secondary');
+                border-bottom: 1px solid t('text-secondary');
+                width: 10rem;
+                height: 4px;
+                margin-top: 1.1rem;
+            }
+
+            &::after {
+                margin-left: 1rem;
+            }
+
+            &::before {
+                margin-left: -11rem;
+            }
         }
 
-        &::before {
-            margin-left: -11rem;
+        & li {
+            list-style: none;
         }
-    }
-
-    & li {
-        list-style: none;
     }
 }
