--- a/assets/sass/components/_skills.scss
+++ b/assets/sass/components/_skills.scss
@@ -1,34 +1,36 @@
 .skills {
-    &__group {
-        & span {
-            font-weight: 700;
-            display: inline-block;
+    @include themed() {
+        &__group {
+            & span {
+                font-weight: 700;
+                display: inline-block;
 
-            &::after{
-                content: ":"
+                &::after{
+                    content: ":"
+                }
+
+                &:hover ~ li {
+                    background-color: t('accent');
+                    color: t('text-important');
+                }
+
             }
 
-            &:hover ~ li {
-                background-color: $color-primary;
-                color: $color-white;
-            }
+            & li{
+                display: inline-block;
+                font-weight: 400;
+                transition: all 0.2s ease-in-out;
+                padding: 0 1px;
+                border-radius: 2px;
 
-        }
+                &:not(:last-child)::after{
+                    content: ", "
+                }
 
-        & li{
-            display: inline-block;
-            font-weight: 400;
-            transition: all 0.2s ease-in-out;
-            padding: 0 1px;
-            border-radius: 2px;
-
-            &:not(:last-child)::after{
-                content: ", "
-            }
-
-            &:hover {
-                background-color: $color-primary;
-                color: $color-white;
+                &:hover {
+                    background-color: t('accent');
+                    color: t('text-important');
+                }
             }
         }
     }
