--- a/layouts/partials/_contacts.html
+++ b/layouts/partials/_contacts.html
@@ -3,7 +3,7 @@
     <ul>
         {{ range .Site.Data.content.BasicInfo.Contacts }}
         <li class="contact__item">
-            <i class="{{ .Icon }}"></i><span>{{ .Info | safeHTML }}</span>
+            <i class="{{ .Icon }} fa-fw fa-lg mr-2"></i><span>{{ .Info | safeHTML }}</span>
         </li>
         {{ end }}
     </ul>
